-Resume, +Skills, working on PF, +typing style

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 			referrerpolicy="no-referrer" rel="stylesheet" />
 		<!-------------- AOS Link -------------->
 		<link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet" />
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
 	</head>
 
 	<body>
@@ -30,13 +31,13 @@
 		<header>
 			<nav id="navbar">
 				<div class="logo">
-					<img alt="" src="/favicon_io/android-chrome-192x192.png">
+					<a href="#home"><img alt="logo" src="./Images/android-chrome-192x192.png"></a>
 				</div>
 				<ul class="nav-items">
 					<li><a href="#home">Home</a></li>
 					<li><a href="#about">About</a></li>
 					<li><a href="#services">Services</a></li>
-					<li><a href="#resume">Resume</a></li>
+					<li><a href="#skills">Skills</a></li>
 					<li><a href="#portfolio">Portfolio</a></li>
 					<li><a href="#blogs">Blogs</a></li>
 					<li><a href="#contact">Contact</a></li>
@@ -48,7 +49,7 @@
 		<section id="home">
 			<div class="text-holder">
 				<h1>Muralidhara <span>Bhat KS</span></h1>
-				<h3><span>Web Developer</span> Based in India</h3>
+				<h3><span class="typing"></span> Based in India</h3>
 				<div class="button">
 					<button class="btn">
 						<a href="#portfolio">My Works</a>
@@ -81,7 +82,7 @@
 				</div>
 				<div class="text-wrapper">
 					<h4>Muralidhara Bhat KS</h4>
-					<h5>A <span>Web Developer</span> based in India</h5>
+					<h5>A <span class="type"></span> based in India</h5>
 					<p>I graduated from the Government Engineering College Kushalnagar with a degree in Computer
 						Science.
 					</p>
@@ -144,141 +145,104 @@
 
 		<!-------------- Resume Section -------------->
 
-		<section id="resume">
+		<section id="skills">
 			<div class="heading-wrapper">
 				<div class="heading">
-					<h2>Resume</h2>
+					<h2>My Skills</h2>
 				</div>
 				<div class="animate-bar"></div>
 
 				<div class="sub-heading">
-					<p>My education and experience till date:</p>
+					<p>These are the skills that i have acquired</p>
 				</div>
 			</div>
 			<div class="container">
-				<!-------------- Experience -------------->
-				<div class="experience">
-					<div class="title">
-						<h4>Experience</h4>
+				<div class="progress-items">
+					<div class="text">
+						<h5>HTML</h5>
 					</div>
-					<!-- 			Add more experience if needed -->
-					<div class="resume-list">
-						<div class="item-arrow"></div>
-						<h5>Machine Learning Intern</h5>
-						<span>Airobosot </span>
-						<p>Worked in the field of AI and ML</p>
+					<div class="progress-bar">
+						<div class="progress-line html"></div>
+					</div>
+				</div>
+				<div class="progress-items">
+					<div class="text">
+						<h5>CSS</h5>
+					</div>
+					<div class="progress-bar">
+						<div class="progress-line css"></div>
+					</div>
+				</div>
+				<div class="progress-items">
+					<div class="text">
+						<h5>JavaScript</h5>
+					</div>
+					<div class="progress-bar">
+						<div class="progress-line js"></div>
+					</div>
+				</div>
+				<div class="progress-items">
+					<div class="text">
+						<h5>React</h5>
+					</div>
+					<div class="progress-bar">
+						<div class="progress-line react"></div>
+					</div>
+				</div>
+				<div class="progress-items">
+					<div class="text">
+						<h5>Python</h5>
+					</div>
+					<div class="progress-bar">
+						<div class="progress-line py"></div>
+					</div>
+				</div>
+				<div class="progress-items">
+					<div class="text">
+						<h5>Django</h5>
+					</div>
+					<div class="progress-bar">
+						<div class="progress-line django"></div>
+					</div>
+				</div>
+				<div class="progress-items">
+					<div class="text">
+						<h5>Node</h5>
+					</div>
+					<div class="progress-bar">
+						<div class="progress-line node"></div>
+					</div>
+				</div>
+				<div class="progress-items">
+					<div class="text">
+						<h5>MongoDB</h5>
+					</div>
+					<div class="progress-bar">
+						<div class="progress-line mongo"></div>
+					</div>
+				</div>
+				<div class="progress-items">
+					<div class="text">
+						<h5>Java</h5>
+					</div>
+					<div class="progress-bar">
+						<div class="progress-line java"></div>
+					</div>
+				</div>
+				<div class="progress-items">
+					<div class="text">
+						<h5>Git</h5>
+					</div>
+					<div class="progress-bar">
+						<div class="progress-line git"></div>
 					</div>
 				</div>
 
-				<!-------------- Education -------------->
-				<div class="education">
-					<div class="title">
-						<h4>Education</h4>
-					</div>
-					<!-- 			Add more experience if needed -->
-					<div class="resume-list">
-						<div class="item-arrow"></div>
-						<h5>Computer Science and Engineering</h5>
-						<span>CGPA: "7.3" | 2018-2022</span>
-						<p>Graduated from Government Engineering College Kushalnagar</p>
-					</div>
-				</div>
 			</div>
-
-			<section id="skills">
-				<div class="heading-wrapper">
-					<div class="heading">
-						<h2>My Skills</h2>
-					</div>
-					<div class="animate-bar"></div>
-				</div>
-				<div class="container">
-					<div class="progress-items">
-						<div class="text">
-							<h5>HTML</h5>
-						</div>
-						<div class="progress-bar">
-							<div class="progress-line html"></div>
-						</div>
-					</div>
-					<div class="progress-items">
-						<div class="text">
-							<h5>CSS</h5>
-						</div>
-						<div class="progress-bar">
-							<div class="progress-line css"></div>
-						</div>
-					</div>
-					<div class="progress-items">
-						<div class="text">
-							<h5>JavaScript</h5>
-						</div>
-						<div class="progress-bar">
-							<div class="progress-line js"></div>
-						</div>
-					</div>
-					<div class="progress-items">
-						<div class="text">
-							<h5>React</h5>
-						</div>
-						<div class="progress-bar">
-							<div class="progress-line react"></div>
-						</div>
-					</div>
-					<div class="progress-items">
-						<div class="text">
-							<h5>Python</h5>
-						</div>
-						<div class="progress-bar">
-							<div class="progress-line py"></div>
-						</div>
-					</div>
-					<div class="progress-items">
-						<div class="text">
-							<h5>Django</h5>
-						</div>
-						<div class="progress-bar">
-							<div class="progress-line django"></div>
-						</div>
-					</div>
-					<div class="progress-items">
-						<div class="text">
-							<h5>Node</h5>
-						</div>
-						<div class="progress-bar">
-							<div class="progress-line node"></div>
-						</div>
-					</div>
-					<div class="progress-items">
-						<div class="text">
-							<h5>MongoDB</h5>
-						</div>
-						<div class="progress-bar">
-							<div class="progress-line mongo"></div>
-						</div>
-					</div>
-					<div class="progress-items">
-						<div class="text">
-							<h5>Java</h5>
-						</div>
-						<div class="progress-bar">
-							<div class="progress-line java"></div>
-						</div>
-					</div>
-					<div class="progress-items">
-						<div class="text">
-							<h5>Git</h5>
-						</div>
-						<div class="progress-bar">
-							<div class="progress-line git"></div>
-						</div>
-					</div>
-
-				</div>
-			</section>
 		</section>
 
 
+		<div class="warning">Still Working on the Portfolio, Blog, Contact</div>
 		<!-------------- Portfolio Section -------------->
 		<section id="portfolio">
 			<div class="heading-wrapper">
@@ -286,22 +250,83 @@
 					<h2>Portfolio</h2>
 				</div>
 				<div class="animate-bar"></div>
-
 				<div class="sub-heading">
-					<p>My area of interest in which i work</p>
+					<p>The works i have done over the years.</p>
 				</div>
 			</div>
+
 			<!-------------- Gallery -------------->
 			<div class="gallery-wrapper">
-				<div class="gallery-nav">
+				<!-- <div class="gallery-nav">
 					<div class="gallery-filter">
-						<span class="filter-item">All</span>
-						<span class="filter-item">Brand</span>
-						<span class="filter-item">Design</span>
-						<span class="filter-item">Photos</span>
+						<span class="filter-item active" data-filter="all">All</span>
+						<span class="filter-item" data-filter="brand">Brand</span>
+						<span class="filter-item" data-filter="design">Design</span>
+						<span class="filter-item" data-filter="photos">Photos</span>
+					</div>
+				</div> -->
+				<div class="content-wrapper">
+					<div class="gallery-item brand" data-aos="fade-right" data-aos-duration="1200">
+						<div class="gallery-item-inner">
+							<img alt="brand" src="/Images/Main.jpg">
+							<div class="overlay">
+								<h5>Brand #1</h5>
+								<p>More Info</p>
+							</div>
+						</div>
+					</div>
+					<div class="gallery-item design" data-aos="fade-right" data-aos-duration="1200">
+						<div class="gallery-item-inner">
+							<img alt="design" src="/Images/Main.jpg">
+							<div class="overlay">
+								<h5>Design #1</h5>
+								<p>More Info</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="gallery-item brand" data-aos="fade-right" data-aos-duration="1200">
+						<div class="gallery-item-inner">
+							<img alt="brand" src="/Images/Main.jpg">
+							<div class="overlay">
+								<h5>Brand #2</h5>
+								<p>More Info</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="gallery-item photos" data-aos="fade-right" data-aos-duration="1200">
+						<div class="gallery-item-inner">
+							<img alt="photos" src="/Images/Main.jpg">
+							<div class="overlay">
+								<h5>Photo #1</h5>
+								<p>More Info</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="gallery-item design" data-aos="fade-right" data-aos-duration="1200">
+						<div class="gallery-item-inner">
+							<img alt="design" src="/Images/Main.jpg">
+							<div class="overlay">
+								<h5>Design #2</h5>
+								<p>More Info</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="gallery-item photos" data-aos="fade-right" data-aos-duration="1200">
+						<div class="gallery-item-inner">
+							<img alt="photos" src="/Images/Main.jpg">
+							<div class="overlay">
+								<h5>Photo #2</h5>
+								<p>More Info</p>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
+
 		</section>
 
 		<!-------------- Jquery Scripts -------------->
