Completed the portfolio

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<header>
 			<nav id="navbar">
 				<div class="logo">
-					<a href="#home"><img alt="logo" src="./Images/android-chrome-192x192.png"></a>
+					<a href="#home"><img alt="" src="Images/android-chrome-192x192.png"></a>
 				</div>
 				<ul class="nav-items">
 					<li><a href="#home">Home</a></li>
@@ -143,7 +143,7 @@
 			</div>
 		</section>
 
-		<!-------------- Resume Section -------------->
+		<!-------------- Skills Section -------------->
 
 		<section id="skills">
 			<div class="heading-wrapper">
@@ -241,8 +241,6 @@
 			</div>
 		</section>
 
-
-		<div class="warning">Still Working on the Portfolio, Blog, Contact</div>
 		<!-------------- Portfolio Section -------------->
 		<section id="portfolio">
 			<div class="heading-wrapper">
@@ -251,83 +249,263 @@
 				</div>
 				<div class="animate-bar"></div>
 				<div class="sub-heading">
-					<p>The works i have done over the years.</p>
+					<p>The works I have done over the years.</p>
 				</div>
 			</div>
 
 			<!-------------- Gallery -------------->
 			<div class="gallery-wrapper">
+
 				<!-- <div class="gallery-nav">
-					<div class="gallery-filter">
-						<span class="filter-item active" data-filter="all">All</span>
-						<span class="filter-item" data-filter="brand">Brand</span>
-						<span class="filter-item" data-filter="design">Design</span>
-						<span class="filter-item" data-filter="photos">Photos</span>
-					</div>
-				</div> -->
+			<div class="gallery-filter">
+				<span class="filter-item active" data-filter="all">All</span>
+				<span class="filter-item" data-filter="brand">Brand</span>
+				<span class="filter-item" data-filter="design">Design</span>
+				<span class="filter-item" data-filter="photos">Photos</span>
+			</div>
+		</div> -->
 				<div class="content-wrapper">
 					<div class="gallery-item brand" data-aos="fade-right" data-aos-duration="1200">
 						<div class="gallery-item-inner">
-							<img alt="brand" src="/Images/Main.jpg">
-							<div class="overlay">
-								<h5>Brand #1</h5>
-								<p>More Info</p>
-							</div>
+							<img alt="currency converter" src="/Images/currency_converter.png">
+							<a href="https://muralidharabhat.me/currency-converter" target="_blank">
+								<div class="overlay">
+									<h5>Currency Converter</h5>
+									<p>The Web Application converts currency.</p>
+								</div>
+							</a>
 						</div>
 					</div>
 					<div class="gallery-item design" data-aos="fade-right" data-aos-duration="1200">
 						<div class="gallery-item-inner">
-							<img alt="design" src="/Images/Main.jpg">
-							<div class="overlay">
-								<h5>Design #1</h5>
-								<p>More Info</p>
-							</div>
+							<img alt="dictionary application" src="/Images/dictionary_app.png">
+							<a href="https://muralidharabhat.me/dictionary_app/" target="_blank">
+								<div class="overlay">
+									<h5>Dictionary App</h5>
+									<p>Search for the meanings..</p>
+								</div>
+							</a>
 						</div>
 					</div>
 
 					<div class="gallery-item brand" data-aos="fade-right" data-aos-duration="1200">
 						<div class="gallery-item-inner">
-							<img alt="brand" src="/Images/Main.jpg">
-							<div class="overlay">
-								<h5>Brand #2</h5>
-								<p>More Info</p>
-							</div>
-						</div>
-					</div>
-
-					<div class="gallery-item photos" data-aos="fade-right" data-aos-duration="1200">
-						<div class="gallery-item-inner">
-							<img alt="photos" src="/Images/Main.jpg">
-							<div class="overlay">
-								<h5>Photo #1</h5>
-								<p>More Info</p>
-							</div>
-						</div>
-					</div>
-
-					<div class="gallery-item design" data-aos="fade-right" data-aos-duration="1200">
-						<div class="gallery-item-inner">
-							<img alt="design" src="/Images/Main.jpg">
-							<div class="overlay">
-								<h5>Design #2</h5>
-								<p>More Info</p>
-							</div>
-						</div>
-					</div>
-
-					<div class="gallery-item photos" data-aos="fade-right" data-aos-duration="1200">
-						<div class="gallery-item-inner">
-							<img alt="photos" src="/Images/Main.jpg">
-							<div class="overlay">
-								<h5>Photo #2</h5>
-								<p>More Info</p>
-							</div>
+							<img alt="trading" src="/Images/stockmarket.png">
+							<a href="https://github.com/SlenderShield/Algorithmic_Trading_Python" target="_blank">
+								<div class="overlay">
+									<h5>Analytic Trading using python</h5>
+									<p>Trading suggestions using sortino ratio built using python</p>
+								</div>
+							</a>
 						</div>
 					</div>
 				</div>
 			</div>
-
 		</section>
+
+
+		<!-------------- Reviews Section -------------->
+		<section id="reviews">
+
+			<div class="owl-carousel owl-theme">
+				<!-- 		Add different reviews -->
+				<div class="item">
+					<div class="img-box">
+						<img alt="" src="Images/Main.jpg">
+					</div>
+					<div class="text-holder">
+						<p class="details">
+							lorem ipsum
+						</p>
+						<h6 class="name">Rohit Kumar</h6>
+						<div class="rating">
+							<i class="fa-regular fa-star"><span>5.0</span></i>
+						</div>
+					</div>
+				</div>
+				<div class="item">
+					<div class="img-box">
+						<img alt="" src="Images/Main.jpg">
+					</div>
+					<div class="text-holder">
+						<p class="details">
+							lorem ipsum
+						</p>
+						<h6 class="name">Rohit Kumar</h6>
+						<div class="rating">
+							<i class="fa-regular fa-star"><span>5.0</span></i>
+						</div>
+					</div>
+				</div>
+				<div class="item">
+					<div class="img-box">
+						<img alt="" src="Images/Main.jpg">
+					</div>
+					<div class="text-holder">
+						<p class="details">
+							lorem ipsum
+						</p>
+						<h6 class="name">Rohit Kumar</h6>
+						<div class="rating">
+							<i class="fa-regular fa-star"><span>5.0</span></i>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-------------- Blogs Section -------------->
+
+		<section id="blogs">
+			<div class="heading-wrapper">
+				<div class="heading">
+					<h2>My Blogs</h2>
+				</div>
+				<div class="animate-bar"></div>
+				<div class="sub-heading">
+					<p>Articles read to read.</p>
+				</div>
+			</div>
+			<div class="container">
+				<!-------------- Blog start -------------->
+
+				<div class="blog blog-1">
+					<div class="img-box">
+						<img alt="" src="Images/Main.jpg">
+					</div>
+					<h6>How i developed my website</h6>
+					<p>The process and progress i made while developing my website</p>
+					<button><a href="#">Read More</a></button>
+				</div>
+				<!-------------- Blog End -------------->
+
+				<!-- 		<div class="blog blog-2"> -->
+				<!-- 			<div class="img-box"> -->
+				<!-- 				<img alt="" src="Images/Main.jpg"> -->
+				<!-- 			</div> -->
+				<!-- 			<h6>How i developed my website</h6> -->
+				<!-- 			<p>The process and progress i made while developing my website</p> -->
+				<!-- 			<button><a href="#">Read More</a></button> -->
+				<!-- 		</div> -->
+				<!-- 		<div class="blog blog-3"> -->
+				<!-- 			<div class="img-box"> -->
+				<!-- 				<img alt="" src="Images/Main.jpg"> -->
+				<!-- 			</div> -->
+				<!-- 			<h6>How i developed my website</h6> -->
+				<!-- 			<p>The process and progress i made while developing my website</p> -->
+				<!-- 			<button><a href="#">Read More</a></button> -->
+				<!-- 		</div> -->
+			</div>
+		</section>
+
+		<!-------------- Contact Section -------------->
+		<section id="contact">
+			<div class="heading-wrapper">
+				<div class="heading">
+					<h2>Get In Touch</h2>
+				</div>
+				<div class="animate-bar"></div>
+				<div class="sub-heading">
+					<p>Use form or social media</p>
+				</div>
+			</div>
+
+			<div class="container">
+				<form action="#">
+					<div class="title">
+						<h4>Contact Me</h4>
+					</div>
+					<div class="forms-row">
+						<div class="input-data">
+							<input placeholder="Name" required type="text">
+						</div>
+						<div class="input-data">
+							<input placeholder="Email" required type="email">
+						</div>
+					</div>
+					<div class="input-data">
+						<input name="subject" placeholder="Subject" type="text">
+					</div>
+					<div class="input-data">
+						<textarea cols="30" name="message" placeholder="Write your message" rows="10"></textarea>
+					</div>
+					<div class="form-row">
+						<input class="btn" type="submit" value="Send Your Message">
+					</div>
+				</form>
+
+				<div class="contact-info">
+					<div class="title">
+						<h4>My Info</h4>
+					</div>
+					<div class="subtitle">
+						<p>Always feel free to contact me..</p>
+					</div>
+
+					<ul class="contact-list">
+						<!-------------- Info item start -------------->
+						<li class="list-item">
+							<div class="icon">
+								<i class="fa-brands fa-hive"></i>
+							</div>
+							<div class="details">
+								<label>Name</label>
+								<p>Muralidhara Bhat KS</p>
+							</div>
+						</li>
+						<!-------------- Info item end -------------->
+
+						<li class="list-item">
+							<div class="icon">
+								<i class="fa-solid fa-location-crosshairs"></i>
+							</div>
+							<div class="details">
+								<label>Location</label>
+								<p>Bengaluru, Karnataka, India</p>
+							</div>
+						</li>
+						<li class="list-item">
+							<div class="icon">
+								<i class="fa-solid fa-at"></i>
+							</div>
+							<div class="details">
+								<label>Email</label>
+								<p><a href="mailto:ksmuralidhara0@gmail.com">ksmuralidhara0@gmail.com</a></p>
+							</div>
+						</li>
+						<li class="list-item">
+							<div class="icon">
+								<i class="fa-solid fa-phone"></i>
+							</div>
+							<div class="details">
+								<label>Mobile Number</label>
+								<p>9844083281</p>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</section>
+
+		<!-------------- Footer -------------->
+
+		<footer id="footer">
+			<div>
+				<p>Made with <i class="fa-solid fa-heart"></i> by <a
+						href="http://github.com/slendershield">Slendershield</a></p>
+				<p>&copy All Rights Reserved 2022</p>
+			</div>
+			<div class="social-icons">
+				<a href="https://www.facebook.com/ksmuralidhara0/" target="_blank"><i
+						class="fa-brands fa-facebook-f"></i></a>
+				<a href="https://www.instagram.com/i_mdb_9.8/" target="_blank"><i
+						class="fa-brands fa-instagram"></i></a>
+				<a href="https://github.com/slendershield" target="_blank"><i class="fa-brands fa-github"></i></a>
+				<a href="https://twitter.com/myself_MDB" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+				<a href="https://www.linkedin.com/in/ksmuralidhara0/" target="_blank"><i
+						class="fa-brands fa-linkedin-in"></i></a>
+			</div>
+		</footer>
+
 
 		<!-------------- Jquery Scripts -------------->
 		<script crossorigin="anonymous"
