Removed the bugs in html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					<li><a href="#services">Services</a></li>
 					<li><a href="#skills">Skills</a></li>
 					<li><a href="#portfolio">Portfolio</a></li>
-					<li><a href="#blogs">Blogs</a></li>
+					<!-- <li><a href="#blogs">Blogs</a></li> -->
 					<li><a href="#contact">Contact</a></li>
 				</ul>
 			</nav>
@@ -255,15 +255,6 @@
 
 			<!-------------- Gallery -------------->
 			<div class="gallery-wrapper">
-
-				<!-- <div class="gallery-nav">
-			<div class="gallery-filter">
-				<span class="filter-item active" data-filter="all">All</span>
-				<span class="filter-item" data-filter="brand">Brand</span>
-				<span class="filter-item" data-filter="design">Design</span>
-				<span class="filter-item" data-filter="photos">Photos</span>
-			</div>
-		</div> -->
 				<div class="content-wrapper">
 					<div class="gallery-item brand" data-aos="fade-right" data-aos-duration="1200">
 						<div class="gallery-item-inner">
@@ -305,10 +296,10 @@
 
 
 		<!-------------- Reviews Section -------------->
-		<section id="reviews">
+		<!-- <section id="reviews">
 
 			<div class="owl-carousel owl-theme">
-				<!-- 		Add different reviews -->
+						Add different reviews
 				<div class="item">
 					<div class="img-box">
 						<img alt="" src="Images/Main.jpg">
@@ -352,9 +343,9 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</section> -->
 		<!-------------- Blogs Section -------------->
-
+		<!-- 
 		<section id="blogs">
 			<div class="heading-wrapper">
 				<div class="heading">
@@ -366,7 +357,7 @@
 				</div>
 			</div>
 			<div class="container">
-				<!-------------- Blog start -------------->
+				------------ Blog start ------------
 
 				<div class="blog blog-1">
 					<div class="img-box">
@@ -376,26 +367,10 @@
 					<p>The process and progress i made while developing my website</p>
 					<button><a href="#">Read More</a></button>
 				</div>
-				<!-------------- Blog End -------------->
+				------------ Blog End ------------
 
-				<!-- 		<div class="blog blog-2"> -->
-				<!-- 			<div class="img-box"> -->
-				<!-- 				<img alt="" src="Images/Main.jpg"> -->
-				<!-- 			</div> -->
-				<!-- 			<h6>How i developed my website</h6> -->
-				<!-- 			<p>The process and progress i made while developing my website</p> -->
-				<!-- 			<button><a href="#">Read More</a></button> -->
-				<!-- 		</div> -->
-				<!-- 		<div class="blog blog-3"> -->
-				<!-- 			<div class="img-box"> -->
-				<!-- 				<img alt="" src="Images/Main.jpg"> -->
-				<!-- 			</div> -->
-				<!-- 			<h6>How i developed my website</h6> -->
-				<!-- 			<p>The process and progress i made while developing my website</p> -->
-				<!-- 			<button><a href="#">Read More</a></button> -->
-				<!-- 		</div> -->
 			</div>
-		</section>
+		</section> -->
 
 		<!-------------- Contact Section -------------->
 		<section id="contact">
