--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
 				<div class="logo">
 					<a href="#home"><img alt="" src="Images/android-chrome-192x192.png"></a>
 				</div>
+
+				<input class="checkbox" id="" name="hamburger" type="checkbox">
+				<div class="hamburger-lines">
+					<div class="line line1"></div>
+					<div class="line line2"></div>
+					<div class="line line3"></div>
+				</div>
+
 				<ul class="nav-items">
 					<li><a href="#home">Home</a></li>
 					<li><a href="#about">About</a></li>
@@ -48,9 +56,13 @@
 		<!-------------- Home Section -------------->
 		<section id="home">
 			<div class="text-holder">
-				<h1>Muralidhara <span>Bhat KS</span></h1>
-				<h3><span class="typing"></span> Based in India</h3>
-				<div class="button">
+				<h1 data-aos="fade-right" data-aos-delay="20" data-aos-duration="1200">Muralidhara <span>Bhat KS</span>
+				</h1>
+				<h3 data-aos="fade-right" data-aos-delay="200" data-aos-duration="1200"><span class="typing"></span>
+					Based in
+					India
+				</h3>
+				<div class="button" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1200">
 					<button class="btn">
 						<a href="#portfolio">My Works</a>
 					</button>
@@ -59,7 +71,8 @@
 			<div class="hero-img">
 				<img alt="" src="/Images/Main.jpg">
 			</div>
-			<div class="social-icons">
+			<div class="social-icons" data-aos="fade-up" data-aos-anchor-placements="bottom-bottom" data-aos-delay="200"
+				data-aos-duration="1200">
 				<a href="https://www.facebook.com/ksmuralidhara0/" target="_blank"><i
 						class="fa-brands fa-facebook-f"></i></a>
 				<a href="https://www.instagram.com/i_mdb_9.8/" target="_blank"><i
@@ -69,7 +82,8 @@
 				<a href="https://www.linkedin.com/in/ksmuralidhara0/" target="_blank"><i
 						class="fa-brands fa-linkedin-in"></i></a>
 			</div>
-			<div class="scroll-text">
+			<div class="scroll-text" data-aos="fade-up" data-aos-anchor-placements="bottom-bottom" data-aos-delay="200"
+				data-aos-duration="1200">
 				<a href="#about">Scroll</a>
 			</div>
 		</section>
@@ -77,23 +91,20 @@
 		<!-------------- About Section -------------->
 		<section id="about">
 			<div class="container">
-				<div class="about-img">
+				<div class="about-img" data-aos="fade-right" data-aos-duration="1200">
 					<img alt="" src="Images/profile.jpg">
 				</div>
-				<div class="text-wrapper">
+				<div class="text-wrapper" data-aos="fade-right" data-aos-duration="1200">
 					<h4>Muralidhara Bhat KS</h4>
 					<h5>A <span class="type"></span> based in India</h5>
 					<p>I graduated from the Government Engineering College Kushalnagar with a degree in Computer
-						Science.
-					</p>
-					<p> Throughout the years of learning, I have gained experience in the fields of Front End and Back
-						End
-						development. I have acquired the skills like HTML, CSS, JavaScript, Bootstrap, React, and for
-						the back
-						end Node, Express, GoLang, Python, and finally MySQL, MongoDB, with version control system Git &
-						GitHub.
-					</p>
-					<p> Let's connect, looking forward to hearing from you.</p>
+						Science. Throughout the years of learning, I have gained experience in the fields of Front End
+						and
+						Back End development. I have acquired the skills like HTML, CSS, JavaScript, Bootstrap, React,
+						and for
+						the back end Node, Express, GoLang, Python, and finally MySQL, MongoDB, with version control
+						system Git &
+						GitHub. Let's connect, looking forward to hearing from you.</p>
 					<div class="about-list">
 						<div class="list-item">
 							<label>Email</label>
@@ -119,21 +130,21 @@
 				</div>
 			</div>
 			<div class="container">
-				<div class="service-card">
+				<div class="service-card" data-aos="fade-right" data-aos-duration="1200" data-aos-easing="ease-in-out">
 					<div class="card-content">
 						<i class="fa-solid fa-pen-to-square"></i>
 						<h5>Web Developer / Designer</h5>
 						<p>I develop websites in the area of Front-end, Back-end and/or Full-Stack</p>
 					</div>
 				</div>
-				<div class="service-card">
+				<div class="service-card" data-aos="fade-right" data-aos-duration="1200" data-aos-easing="ease-in-out">
 					<div class="card-content">
 						<i class="fa-solid fa-pen-ruler"></i>
 						<h5>UX Designer</h5>
 						<p>User Experience is a field where one has to be both user and stack holder.</p>
 					</div>
 				</div>
-				<div class="service-card">
+				<div class="service-card" data-aos="fade-right" data-aos-duration="1200" data-aos-easing="ease-in-out">
 					<div class="card-content">
 						<i class="fa-solid fa-code"></i>
 						<h5>Software Developer</h5>
@@ -143,7 +154,7 @@
 			</div>
 		</section>
 
-		<!-------------- Skills Section -------------->
+		<!-------------- Resume Section -------------->
 
 		<section id="skills">
 			<div class="heading-wrapper">
@@ -156,8 +167,8 @@
 					<p>These are the skills that i have acquired</p>
 				</div>
 			</div>
-			<div class="container">
-				<div class="progress-items">
+			<div class="container" data-aos="fade-right">
+				<div class="progress-items" data-aos="fade-up">
 					<div class="text">
 						<h5>HTML</h5>
 					</div>
@@ -165,11 +176,11 @@
 						<div class="progress-line html"></div>
 					</div>
 				</div>
-				<div class="progress-items">
+				<div class="progress-items" data-aos="fade-up">
 					<div class="text">
 						<h5>CSS</h5>
 					</div>
-					<div class="progress-bar">
+					<div class="progress-bar" data-aos="fade-up">
 						<div class="progress-line css"></div>
 					</div>
 				</div>
@@ -177,11 +188,11 @@
 					<div class="text">
 						<h5>JavaScript</h5>
 					</div>
-					<div class="progress-bar">
+					<div class="progress-bar" data-aos="fade-up">
 						<div class="progress-line js"></div>
 					</div>
 				</div>
-				<div class="progress-items">
+				<div class="progress-items" data-aos="fade-up">
 					<div class="text">
 						<h5>React</h5>
 					</div>
@@ -189,15 +200,15 @@
 						<div class="progress-line react"></div>
 					</div>
 				</div>
-				<div class="progress-items">
+				<div class="progress-items" data-aos="fade-up">
 					<div class="text">
 						<h5>Python</h5>
 					</div>
-					<div class="progress-bar">
+					<div class="progress-bar" data-aos="fade-up">
 						<div class="progress-line py"></div>
 					</div>
 				</div>
-				<div class="progress-items">
+				<div class="progress-items" data-aos="fade-up">
 					<div class="text">
 						<h5>Django</h5>
 					</div>
@@ -205,7 +216,7 @@
 						<div class="progress-line django"></div>
 					</div>
 				</div>
-				<div class="progress-items">
+				<div class="progress-items" data-aos="fade-up">
 					<div class="text">
 						<h5>Node</h5>
 					</div>
@@ -213,7 +224,7 @@
 						<div class="progress-line node"></div>
 					</div>
 				</div>
-				<div class="progress-items">
+				<div class="progress-items" data-aos="fade-up">
 					<div class="text">
 						<h5>MongoDB</h5>
 					</div>
@@ -221,7 +232,7 @@
 						<div class="progress-line mongo"></div>
 					</div>
 				</div>
-				<div class="progress-items">
+				<div class="progress-items" data-aos="fade-up">
 					<div class="text">
 						<h5>Java</h5>
 					</div>
@@ -229,7 +240,7 @@
 						<div class="progress-line java"></div>
 					</div>
 				</div>
-				<div class="progress-items">
+				<div class="progress-items" data-aos="fade-up">
 					<div class="text">
 						<h5>Git</h5>
 					</div>
@@ -249,12 +260,21 @@
 				</div>
 				<div class="animate-bar"></div>
 				<div class="sub-heading">
-					<p>The works I have done over the years.</p>
+					<p>THE WORKS I HAVE DONE OVER THE YEARS.</p>
 				</div>
 			</div>
 
 			<!-------------- Gallery -------------->
 			<div class="gallery-wrapper">
+
+				<!-- <div class="gallery-nav">
+			<div class="gallery-filter">
+				<span class="filter-item active" data-filter="all">All</span>
+				<span class="filter-item" data-filter="brand">Brand</span>
+				<span class="filter-item" data-filter="design">Design</span>
+				<span class="filter-item" data-filter="photos">Photos</span>
+			</div>
+		</div> -->
 				<div class="content-wrapper">
 					<div class="gallery-item brand" data-aos="fade-right" data-aos-duration="1200">
 						<div class="gallery-item-inner">
@@ -294,84 +314,6 @@
 			</div>
 		</section>
 
-
-		<!-------------- Reviews Section -------------->
-		<!-- <section id="reviews">
-
-			<div class="owl-carousel owl-theme">
-						Add different reviews
-				<div class="item">
-					<div class="img-box">
-						<img alt="" src="Images/Main.jpg">
-					</div>
-					<div class="text-holder">
-						<p class="details">
-							lorem ipsum
-						</p>
-						<h6 class="name">Rohit Kumar</h6>
-						<div class="rating">
-							<i class="fa-regular fa-star"><span>5.0</span></i>
-						</div>
-					</div>
-				</div>
-				<div class="item">
-					<div class="img-box">
-						<img alt="" src="Images/Main.jpg">
-					</div>
-					<div class="text-holder">
-						<p class="details">
-							lorem ipsum
-						</p>
-						<h6 class="name">Rohit Kumar</h6>
-						<div class="rating">
-							<i class="fa-regular fa-star"><span>5.0</span></i>
-						</div>
-					</div>
-				</div>
-				<div class="item">
-					<div class="img-box">
-						<img alt="" src="Images/Main.jpg">
-					</div>
-					<div class="text-holder">
-						<p class="details">
-							lorem ipsum
-						</p>
-						<h6 class="name">Rohit Kumar</h6>
-						<div class="rating">
-							<i class="fa-regular fa-star"><span>5.0</span></i>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section> -->
-		<!-------------- Blogs Section -------------->
-		<!-- 
-		<section id="blogs">
-			<div class="heading-wrapper">
-				<div class="heading">
-					<h2>My Blogs</h2>
-				</div>
-				<div class="animate-bar"></div>
-				<div class="sub-heading">
-					<p>Articles read to read.</p>
-				</div>
-			</div>
-			<div class="container">
-				------------ Blog start ------------
-
-				<div class="blog blog-1">
-					<div class="img-box">
-						<img alt="" src="Images/Main.jpg">
-					</div>
-					<h6>How i developed my website</h6>
-					<p>The process and progress i made while developing my website</p>
-					<button><a href="#">Read More</a></button>
-				</div>
-				------------ Blog End ------------
-
-			</div>
-		</section> -->
-
 		<!-------------- Contact Section -------------->
 		<section id="contact">
 			<div class="heading-wrapper">
@@ -385,7 +327,7 @@
 			</div>
 
 			<div class="container">
-				<form action="#">
+				<form action="#" data-aos="fade-right" data-aos-duration="1200">
 					<div class="title">
 						<h4>Contact Me</h4>
 					</div>
@@ -408,7 +350,7 @@
 					</div>
 				</form>
 
-				<div class="contact-info">
+				<div class="contact-info" data-aos="fade-left" data-aos-duration="1200">
 					<div class="title">
 						<h4>My Info</h4>
 					</div>
@@ -466,7 +408,8 @@
 		<footer id="footer">
 			<div>
 				<p>Made with <i class="fa-solid fa-heart"></i> by <a
-						href="http://github.com/slendershield">Slendershield</a></p>
+						href="http://github.com/slendershield">Slendershield</a>
+				</p>
 				<p>&copy All Rights Reserved 2022</p>
 			</div>
 			<div class="social-icons">
