--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			gtag('config', 'G-8X3XLGVB5E');
 		</script>
 		<meta charset="UTF-8">
-		<meta content="width=device-width, initial-scale=0.9" name="viewport">
+		<meta content="width=device-width, initial-scale=0.8" name="viewport">
 		<meta content="ie=edge" http-equiv="X-UA-Compatible">
 		<title>Muralidhara Bhat KS</title>
 		<!-------------- Local Stylesheet Link -------------->
@@ -337,8 +337,8 @@
 			</div>
 
 			<div class="container">
-				<form action="https://getform.io/f/fa9940a7-995d-4420-af76-91a25485f19b" data-aos="fade-right"
-					data-aos-duration="1200">
+				<form action="https://getform.io/f/fa9940a7-995d-4420-af76-91a25485f19b" method="post"
+					data-aos="fade-right" data-aos-duration="1200">
 					<div class="title">
 						<h4>Contact Me</h4>
 					</div>
@@ -453,7 +453,7 @@
 			AOS.init();
 		</script>
 		<!-------------- Local Script -------------->
-		<script src="js/script.js"></script>
+		<script src="js/app.js"></script>
 	</body>
 
 </html>
